library/tests/fy_py_files/test_fy_py_files/invalid_fy_code_raises_correct_error/property_invalid_abstract_mixins/property_invalid_abstract_mixin_fy.py
"""fy
property greeting: str using constant:
    method constant using constant
"""
